--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li><a class="nav-link scrollto " href="#portfolio">Rewards</a></li>
           <li><a class="nav-link scrollto" href="#team">Our Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://ecoholics.netlify.app/login">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="login.html">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -200,7 +200,7 @@
             <p> Turn your recyclable trash into treasure by using Ecoholics where we pay you for your trash.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="https://ecoholics.netlify.app/login">Start Now</a>
+            <a class="cta-btn align-middle" href="login.html">Start Now</a>
           </div>
         </div>
 
