--- a/rewards.html
+++ b/rewards.html
@@ -56,11 +56,11 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="https://ecoholics.netlify.app/rewards">Home</a></li>
+          <li><a class="nav-link scrollto active" href="https://itsjaypathak.me/Ecoholics/rewards.html">Home</a></li>
           <li><a class="nav-link scrollto" href="#footprint">Footprint</a></li>
           <li><a class="nav-link scrollto" href="#services">Eco Feed</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Reedem</a></li>
-          <li><a class="getstarted scrollto" href="https://ecoholics.netlify.app/login">Sign Out</a></li>
+          <li><a class="getstarted scrollto" href="https://itsjaypathak.me/Ecoholics/login.html">Sign Out</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
