--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
               <div class="social">
                 <a href="https://github.com/PrathamOG"><i class="bi bi-github"></i></a>
                 <a href="https://www.devpost.com/PrathamOG"><i class="bi bi-code"></i></a>
-                <a href="https://www.instagram.com/pratham173821/"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/pratham.p09/"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/pratham-pathak/"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
