--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@
               <h4>Jayprakash Pathak</h4>
               <span>Programmer</span>
               <div class="social">
-                <a href="https://www.jayprakashpathak.me"><i class="bi bi-globe"></i></a>
+                <a href="https://www.itsjaypathak.me"><i class="bi bi-globe"></i></a>
                 <a href="https://github.com/jayprakash07"><i class="bi bi-github"></i></a>
                 <a href="https://www.devpost.com/jayprakash07"><i class="bi bi-code"></i></a>
-                <a href="https://www.instagram.com/jayprakash07"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/jayprakash.svg"><i class="bi bi-instagram"></i></a>
               </div>
             </div>
           </div>
