--- a/rewards.html
+++ b/rewards.html
@@ -60,7 +60,7 @@
           <li><a class="nav-link scrollto" href="#footprint">Footprint</a></li>
           <li><a class="nav-link scrollto" href="#services">Eco Feed</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Reedem</a></li>
-          <li><a class="getstarted scrollto" href="index.html">Sign Out</a></li>
+          <li><a class="getstarted scrollto" href="itsjaypathak.me/Ecoholics/">Sign Out</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
